--- a/AndroidProject/SAEPatrimonio/app/build.gradle
+++ b/AndroidProject/SAEPatrimonio/app/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'com.android.application'
 
+
+repositories {
+    jcenter()
+}
 android {
     compileSdkVersion 26
     defaultConfig {
@@ -9,6 +13,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        buildToolsVersion '23.0.2' // Older versions may give compile errors
     }
     buildTypes {
         release {
@@ -26,4 +31,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    compile 'com.journeyapps:zxing-android-embedded:3.5.0'
 }
