--- a/AndroidProject/SAEPatrimonio/app/build.gradle
+++ b/AndroidProject/SAEPatrimonio/app/build.gradle
@@ -32,4 +32,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.journeyapps:zxing-android-embedded:3.5.0'
+    compile 'com.google.android.gms:play-services:7.8+'
+
 }
